objects/Marketing_Project__c.object
<CustomObject>
    <description>KF(20130716) Custom Object to bring in yearly Marketing Expense Tracking, child object off Marketing Expenses, enter project detail</description>
    <fields>
        <fullName>Anthem_Check_Request_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem Check Request Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Association/ Chamber</fullName>
                </value>
                <value>
                    <fullName>Broker/Producer</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Labor/ Union</fullName>
                </value>
                <value>
                    <fullName>Prospect-Consumer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sheet, Flyer, Insert, Overview</fullName>
                </value>
                <value>
                    <fullName>Binder Cover/Spines</fullName>
                </value>
                <value>
                    <fullName>Booklet/handbook</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Card/Coupon</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Decal</fullName>
                </value>
                <value>
                    <fullName>Design Only</fullName>
                </value>
                <value>
                    <fullName>Direct Mailer</fullName>
                </value>
                <value>
                    <fullName>Display/Banner</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Envelope</fullName>
                </value>
                <value>
                    <fullName>Excel Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Explanation of Benefits</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Folder</fullName>
                </value>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Invitation</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Magnet</fullName>
                </value>
                <value>
                    <fullName>Masthead</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overview (Single Value)</fullName>
                </value>
                <value>
                    <fullName>Payroll Stuffer</fullName>
                </value>
                <value>
                    <fullName>Postcard</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>PowerPoint Presentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CostTotal__c</fullName>
        <label>Cost Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_1_Description__c</fullName>
        <label>Cost 1 Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creative Development</fullName>
                </value>
                <value>
                    <fullName>Print Production</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Postage</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Premium Items</fullName>
                </value>
                <value>
                    <fullName>Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Web Resource</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Receipt Outside Vendor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_1__c</fullName>
        <label>Cost 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_2_Description__c</fullName>
        <label>Cost 2 Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creative Development</fullName>
                </value>
                <value>
                    <fullName>Print Production</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Postage</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Premium Items</fullName>
                </value>
                <value>
                    <fullName>Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Web Resource</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Receipt Outside Vendor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_2__c</fullName>
        <label>Cost 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_3_Description__c</fullName>
        <label>Cost 3 Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creative Development</fullName>
                </value>
                <value>
                    <fullName>Print Production</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Postage</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Premium Items</fullName>
                </value>
                <value>
                    <fullName>Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Web Resource</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Receipt Outside Vendor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_3__c</fullName>
        <label>Cost 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Total__c</fullName>
        <formula>Cost_1__c + Cost_2__c + Cost_3__c + Cost_4__c + Cost_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DeadlineDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoiced_Amount__c</fullName>
        <label>Invoiced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Issued_To__c</fullName>
        <label>Issued To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>TP Vendor</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingExpense__c</fullName>
        <label>Marketing Expense</label>
        <referenceTo>Marketing_Tracking__c</referenceTo>
        <relationshipLabel>Marketing Projects</relationshipLabel>
        <relationshipName>Marketing_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Output__c</fullName>
        <label>Output</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic/PDF</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Posted to Internet</fullName>
                </value>
                <value>
                    <fullName>Posted to Intranet</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(MarketingExpense__r.Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Marketing Project</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Projects</pluralLabel>
    <recordTypes>
        <fullName>Invoice</fullName>
        <active>true</active>
        <label>Invoice</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MP_SpendingOverage_Invoices</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Invoiced_Amount__c &gt;  (MarketingExpense__r.Total_Fund_Remaining_Balance__c ), true,false)</errorConditionFormula>
        <errorMessage>You will exceed your remaining balance with this invoice.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MP_Validate_Invoice_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Invoice_Date__c &gt;  MarketingExpense__r.End_Date__c ||  Invoice_Date__c &lt;  MarketingExpense__r.Start_Date__c ,true,false)</errorConditionFormula>
        <errorMessage>Your Invoice Date is Not Within the Range of This Project</errorMessage>
    </validationRules>
</CustomObject>